<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:focusableInTouchMode="true"
    android:background="@color/black"
    tools:context=".ui.annotation.AnnotationFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_input_A_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_A_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/s_input_A_name"
            android:inputType="textCapCharacters" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_input_A_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/ly_input_A_name"
        app:layout_constraintStart_toStartOf="@+id/ly_input_A_name"
        app:layout_constraintTop_toBottomOf="@+id/ly_input_A_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_A_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/s_input_A_surname"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_input_A_note1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/ly_input_A_surname"
        app:layout_constraintStart_toStartOf="@+id/ly_input_A_surname"
        app:layout_constraintTop_toBottomOf="@+id/ly_input_A_surname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_A_note1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/s_input_A_note1"
            android:inputType="textLongMessage"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_input_A_note2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/ly_input_A_note1"
        app:layout_constraintStart_toStartOf="@+id/ly_input_A_note1"
        app:layout_constraintTop_toBottomOf="@+id/ly_input_A_note1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_A_note2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/s_input_A_note2"
            android:inputType="textLongMessage"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_input_A_note3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/ly_input_A_note2"
        app:layout_constraintStart_toStartOf="@+id/ly_input_A_note2"
        app:layout_constraintTop_toBottomOf="@+id/ly_input_A_note2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_A_note3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/s_input_A_note3"
            android:inputType="textLongMessage"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_A_create"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/s_btn_A_create"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ly_input_A_note3"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_A_delete"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:text="@string/s_btn_A_delete"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/ly_input_A_note3"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>